# APGMS

./: .dockerignore  .env.development.local  .env.example  .env.local.example  .env.rpt.fixture  .envrc  .eslintignore  .eslintrc.cjs  .gitignore  .vale.ini  BANK_MODELS.md  CHANGELOG.md  CODEOWNERS  COMMIT_MSG.txt  CONTRIBUTING.md  Dev-Demo.ps1  Dev-Down.ps1  Dev-Seed.ps1  Dev-Up.ps1  Dockerfile  Dockerfile.node  Fix-Normalizer-Metrics.ps1  Fix-Stack-And-Smoke.ps1  Fix-Stack-And-Smoke_v4.ps1  Makefile  Makefile.bak-20251004-155450  RATES_VERSION  README.md  README_PATENT_ADD.md  RELEASE_NOTES_v2025.10.04.0.md  RUN.md  Repair-And-Test.ps1  Repair-Implement-Run_v2.ps1  Reset-PostgresPassword.ps1  Run-ProviderContracts.ps1  apgms_diagnostics.txt  apgms_scan.ps1  apgms_scan_report.csv  apgms_scan_report.md  apply_app_upgrades.ps1  (+119 more)
api/: index.test.ts  (+3 more)
apps/services/event-normalizer/: Dockerfile.20251003-103710.bak  Dockerfile.20251003-104046.bak  Dockerfile.20251003-105629.bak  Dockerfile.20251003-110458.bak  Dockerfile.20251003-175856.bak  Dockerfile.20251003-183017.bak  Dockerfile.20251003-183706.bak  Dockerfile.20251003-184234.bak  Dockerfile.20251003-190550.bak  pyproject.toml  run_normalizer.py  run_normalizer.py.20251003-174737.bak
apps/services/event-normalizer/app/: main.py  main.py.bak
apps/services/tax-engine/: CHANGELOG.md  Dockerfile  Dockerfile.20251003-174737.bak  Dockerfile.20251003-175856.bak  README.md  pyproject.toml  pyproject.toml.bak  requirements.txt
libs/py-sdk/: pyproject.toml
libs/py-sdk/apgms_sdk/: __init__.py  idempotency.py
libs/py-sdk/tests/: test_rpt.py
(+5245 files in other folders)
