[tool.poetry]
name = "apgms-py-sdk"
version = "0.1.0"
description = "APGMS Python SDK (schemas, RPT)"
authors = ["you"]
packages = [{ include = "apgms_sdk" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pydantic = "^2.9.2"
PyNaCl = "^1.5.0"
cbor2 = "^5.6.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"