[tool.poetry]
name = "apgms-event-normalizer"
version = "0.1.0"
description = "APGMS Event Normalizer"
authors = ["you"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.115.2"
uvicorn = { version = "^0.30.6", extras = ["standard"] }
pydantic = "^2.9.2"
nats-py = "^2.11.0"
orjson = "^3.10.7"
prometheus-client = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
